--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,17 @@ include_directories(3rd/clew)
 include_directories(3rd/clew/include)
 include_directories(3rd/OpenCLHelper)
 
-find_package(SDL2)
+find_package(OpenCL REQUIRED)
+find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 
 include_directories(${SDL2_INCLUDE_DIR})
+include_directories(${OPENCL_INCLUDE_DIRS})
+
+message(opencl header: ${OPENCL_INCLUDE_DIRS})
+message(opencl lib: ${OPENCL_LIBRARIES})
+
+message(opengl lib: ${OPENGL_LIBRARY})
 
 add_library(clew SHARED 3rd/clew/src/clew.c )
 target_link_libraries( clew dl )
