--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(main raytracer.cpp)
-target_link_libraries(main RayCoreLib ${SDL2_LIBRARY} ${OPENGL_LIBRARY} ${OPENCL_LIBRARIES})
+target_link_libraries(main RayCoreLib ${SDL_LIBRARY} ${OPENGL_LIBRARY} ${OPENCL_LIBRARIES})
